--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ h1 {
 
 p {
   font-size: 16px;
+  line-height: 20px;
   color: var(--desaturated-blue);
   text-align: center;
 }
@@ -125,7 +126,11 @@ button {
 
 @media (max-width: 375px) {
   .order-component {
-    margin: 0 24px;
+    margin: 0 24px 2rem 24px;
+  }
+
+  .plan-and-price {
+    margin-right: 0;
   }
 }
 
